Cambios Realizados (Para Arqueos sobretodo):
  1º Cambiar (quitar) activas: Ya se sobreentiende con ocupadas (Para todo no solo arqueo)
  2º obtener camareros (Filtro Arqueo)
  3º API Arqueos con su funcionalidad (Nuevos filtros tambien en el Criteria pattern
