# resource-server/src/main/resources/openapi_arqueo.yml
@@ -52,7 +52,65 @@ paths:
                   error:
                     type: string
                     example: "Parámetro 'id' es requerido."
-
+  /arqueo/camareros/buscar:
+    get:
+      summary: Obtener listado único de camareros
+      description: Devuelve un listado con los nombres únicos de camareros desde la tabla `mesa_servida`.
+      tags:
+        - Camareros
+      responses:
+        '200':
+          description: Lista de nombres de camareros
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+        '500':
+          description: Error del servidor    
+  /arqueo/arquear:
+    post:
+      summary: Marcar mesas como arqueadas
+      description: Recibe una lista de IDs de mesas y las marca como arqueadas en el sistema.
+      tags:
+        - Arqueo
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                ids:
+                  type: array
+                  items:
+                    type: string
+                    format: uuid
+                usuario:
+                  type: string
+              required:
+                - ids
+      responses:
+        '200':
+          description: Mesas arqueadas correctamente
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+        '400':
+          description: Solicitud mal formada
+        '401':
+          description: No autorizado
+        '500':
+          description: Error interno del servidor
+      security:
+        - bearerAuth: [ ]
 components:
   schemas:
     MesaServida:
@@ -84,8 +142,6 @@ components:
           type: string
           format: date-time
         arqueada:
-          type: boolean
-        activa:
           type: boolean
         estado:
           type: string
